--- a/app/src/main/res/layout/activity_menu_demarrage.xml
+++ b/app/src/main/res/layout/activity_menu_demarrage.xml
@@ -10,23 +10,21 @@
         android:id="@+id/buttonGamme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gamme"
+        android:text="@string/gamme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.252"
+        app:layout_constraintHorizontal_bias="0.274"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.882" />
+        app:layout_constraintVertical_bias="0.896" />
 
     <Button
         android:id="@+id/buttonConnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Connexion"
+        android:text="@string/connexion"
         app:layout_constraintBottom_toBottomOf="@+id/buttonGamme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toEndOf="@+id/buttonGamme"
-        app:layout_constraintTop_toTopOf="@+id/buttonGamme"
-        app:layout_constraintVertical_bias="0.882" />
+        app:layout_constraintTop_toTopOf="@+id/buttonGamme" />
 </androidx.constraintlayout.widget.ConstraintLayout>
