--- a/app/src/main/res/layout/activity_menu_gamme.xml
+++ b/app/src/main/res/layout/activity_menu_gamme.xml
@@ -14,8 +14,42 @@
       android:text="Menu"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintHorizontal_bias="0.869"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.863" />
+      app:layout_constraintVertical_bias="0.065" />
+
+  <Button
+      android:id="@+id/buttonAdd"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Ajouter"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/buttonCommit"
+      app:layout_constraintHorizontal_bias="0.427"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.95" />
+
+  <Button
+      android:id="@+id/buttonCommit"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginEnd="76dp"
+      android:layout_marginRight="76dp"
+      android:text="Valider"
+      app:layout_constraintBottom_toBottomOf="@+id/buttonAdd"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/buttonAdd"
+      app:layout_constraintVertical_bias="0.0" />
+
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/ViewListGamme"
+      android:layout_width="327dp"
+      android:layout_height="521dp"
+      app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.535"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/buttonMenu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
