Preapartion mise en place BDD avec creation + Formulaire edition.

--- a/app/src/main/res/layout/activity_create_gamme.xml
+++ b/app/src/main/res/layout/activity_create_gamme.xml
@@ -25,7 +25,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Titre"
-        app:layout_constraintBottom_toTopOf="@+id/button_suivant"
+        app:layout_constraintBottom_toTopOf="@+id/button_End"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.627"
         app:layout_constraintStart_toEndOf="@+id/TextViewTitreGamme"
@@ -69,14 +69,23 @@
         app:layout_constraintVertical_bias="0.245" />
 
     <Button
-        android:id="@+id/button_suivant"
+        android:id="@+id/button_End"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Suivant"
+        android:text="Terminer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.868"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.954" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerView_ListOpe"
+        android:layout_width="393dp"
+        android:layout_height="321dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_End"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/muliTextView_descriptionGamme" />
 </androidx.constraintlayout.widget.ConstraintLayout>
