--- a/app/src/main/res/layout/activity_create_operation.xml
+++ b/app/src/main/res/layout/activity_create_operation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuOperation">
+    tools:context=".OperationRepository.CreateOperation">
 
     <TextView
         android:id="@+id/textView_titreoperation"
