--- a/app/src/main/res/layout/activity_create_gamme.xml
+++ b/app/src/main/res/layout/activity_create_gamme.xml
@@ -88,4 +88,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/muliTextView_descriptionGamme" />
+
+    <Button
+        android:id="@+id/button_creategamme_ajoutoperation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="Créer Opération"
+        app:layout_constraintBottom_toBottomOf="@+id/button_End"
+        app:layout_constraintEnd_toStartOf="@+id/button_End"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button_End" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
