Create, Edit et Suppression "presque" fonctionnel à 100%, manque contraintes, finish des activitées, et sauvegarde global.

--- a/app/src/main/res/layout/activity_menu_gamme.xml
+++ b/app/src/main/res/layout/activity_menu_gamme.xml
@@ -5,7 +5,7 @@
     android:id="@+id/root_menugamme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuGamme">
+    tools:context=".ListGammeActivity">
 
   <Button
       android:id="@+id/buttonMenu"
