--- a/app/src/main/res/layout/activity_menu_tache.xml
+++ b/app/src/main/res/layout/activity_menu_tache.xml
@@ -4,53 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuTache">
-
-    <TextView
-        android:id="@+id/textView_titretache"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Titre de la tache"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_titretache"
-        app:layout_constraintEnd_toStartOf="@+id/editText_titretache"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editText_titretache" />
-
-    <EditText
-        android:id="@+id/editText_titretache"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.92"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imagebutton_retourOpération"
-        app:layout_constraintVertical_bias="0.503" />
+    tools:context=".TacheRepository.EditTacheActivity">
 
     <TextView
         android:id="@+id/textView_typeTache"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Type Action"
-        app:layout_constraintBottom_toTopOf="@+id/textView_valeur"
-        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.23"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_titretache" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.32" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
-        android:layout_width="130dp"
-        android:layout_height="160dp"
-        android:layout_marginTop="188dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextNumber_valeurTache"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/textView_typeTache"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.661"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imagebutton_retourOpération"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintStart_toEndOf="@+id/textView_typeTache"
+        app:layout_constraintTop_toTopOf="@+id/textView_typeTache">
 
         <RadioButton
             android:id="@+id/radioButton_wait"
@@ -62,26 +37,19 @@
             android:id="@+id/radioButton_turn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Faire tourner" />
+            android:text="Tourner" />
 
-        <RadioButton
-            android:id="@+id/radioButton_inversturn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Inverser Sens" />
     </RadioGroup>
 
     <TextView
         android:id="@+id/textView_valeur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginLeft="64dp"
         android:text="Valeur"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber_valeurTache"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editTextNumber_valeurTache"
-        app:layout_constraintVertical_bias="0.461" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_typeTache"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.49" />
 
     <EditText
         android:id="@+id/editTextNumber_valeurTache"
@@ -89,11 +57,11 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/textView_valeur"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.711"
         app:layout_constraintStart_toEndOf="@+id/textView_valeur"
-        app:layout_constraintTop_toBottomOf="@+id/imagebutton_retourOpération"
+        app:layout_constraintTop_toTopOf="@+id/textView_valeur"
         app:layout_constraintVertical_bias="0.654" />
 
     <Button
