--- a/app/src/main/res/layout/widget_liste_gamme.xml
+++ b/app/src/main/res/layout/widget_liste_gamme.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linearLayoutlisteGamme"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -24,5 +25,12 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="exec" />
+
+    <ImageButton
+        android:id="@+id/widget_listgamme_buttondelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:srcCompat="@android:drawable/ic_delete" />
 
 </LinearLayout>
