--- a/app/src/main/res/layout/activity_create_operation.xml
+++ b/app/src/main/res/layout/activity_create_operation.xml
@@ -15,7 +15,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.141"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton_menu" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.894" />
 
     <EditText
         android:id="@+id/editText_Titreoperation"
@@ -26,8 +27,7 @@
         android:text="Titre"
         app:layout_constraintBottom_toTopOf="@+id/editText_descriptionOperation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_titreoperation"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton_menu" />
+        app:layout_constraintStart_toEndOf="@+id/textView_titreoperation" />
 
     <EditText
         android:id="@+id/editText_descriptionOperation"
@@ -81,29 +81,5 @@
         android:text="Créer tâche"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerView_listetâche"
         app:layout_constraintEnd_toEndOf="@+id/recyclerView_listetâche" />
-
-    <ImageButton
-        android:id="@+id/imageButton_menu"
-        android:layout_width="99dp"
-        android:layout_height="89dp"
-        android:layout_marginTop="16dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/maison" />
-
-    <ImageButton
-        android:id="@+id/imageButton_retourGamme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/textView_titreoperation"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton_menu"
-        app:layout_constraintHorizontal_bias="0.187"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.269"
-        app:srcCompat="@android:drawable/ic_menu_revert" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
