--- a/app/src/main/res/layout/activity_menu_demarrage.xml
+++ b/app/src/main/res/layout/activity_menu_demarrage.xml
@@ -13,32 +13,55 @@
         android:text="@string/gamme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.274"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.896" />
-
-    <Button
-        android:id="@+id/buttonDemo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Demo"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonGamme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.527"
-        app:layout_constraintStart_toEndOf="@+id/buttonGamme"
-        app:layout_constraintTop_toTopOf="@+id/buttonGamme"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.976" />
 
     <Button
         android:id="@+id/buttonConnect"
         android:layout_width="132dp"
         android:layout_height="51dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
         android:text="Connexion"
-        app:layout_constraintBottom_toTopOf="@+id/buttonDemo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.889"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewModes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Modes disponibles :"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonConnect" />
+
+    <Button
+        android:id="@+id/buttonPanne"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:text="Panne"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonAuto" />
+
+    <Button
+        android:id="@+id/buttonAuto"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
+        android:text="Automatique"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewModes" />
+
+    <Button
+        android:id="@+id/buttonManuel"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:text="Manuel"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAuto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
