--- a/app/src/main/res/layout/activity_menu_tache.xml
+++ b/app/src/main/res/layout/activity_menu_tache.xml
@@ -56,13 +56,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberSigned"
         app:layout_constraintBottom_toBottomOf="@+id/textView_valeur"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.711"
         app:layout_constraintStart_toEndOf="@+id/textView_valeur"
         app:layout_constraintTop_toTopOf="@+id/textView_valeur"
-        app:layout_constraintVertical_bias="0.654" />
+        app:layout_constraintVertical_bias="0.654"
+        />
 
     <Button
         android:id="@+id/button_validerTache"
@@ -87,5 +88,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023"
         app:srcCompat="@android:drawable/ic_menu_revert" />
+
+    <Spinner
+        android:id="@+id/dropdownMoteur"
+        android:layout_width="216dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber_valeurTache"
+        android:entries="@array/listeMoteurs"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
